using System.Collections.Generic;
using UnityEngine;

public class SceneDataForSave : YSingleton<SceneDataForSave>
{
    public List<GameSceneSO> gameScenes;
}
